<resources>
    <string name="app_name">ShoeStore</string>
    <string name="authentication">Authentication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="havefun">Have fun!</string>
    <string name="cont">Continue</string>
    <string name="instruction1">By using this app, you can browse the shoes list.</string>
    <string name="instruction2">The functionality to add new shoes is also available in the shoe list screen.</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>

</resources>
