<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.instructions.InstructionsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction1"
            android:gravity="left"
            style="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/instruction2"
            android:gravity="left"
            style="@style/TextAppearance.AppCompat.Body1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.onContinue()}"/>
    </LinearLayout>
</layout>